--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: 'Source Code Pro', Menlo;
+  font-family: 'Source Code Pro', Menlo, monospace;
 }
 
 .App-logo {
